--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,27 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
+      # 1️⃣ Checkout code
       - uses: actions/checkout@v3
       
+      # 2️⃣ Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-          cache: "pip"   # ✅ enable pip caching for speed
+          cache: "pip"
 
+      # 3️⃣ Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 4️⃣ Run tests with proper PYTHONPATH
       - name: Run tests
-        run: PYTHONPATH=. pytest -q
+        env:
+          PYTHONPATH: src    # Important: points to src/ for absolute imports
+        run: |
+          pytest -v tests --maxfail=1 --disable-warnings
