--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,31 @@
-fastapi
-uvicorn
-streamlit
-requests
-python-multipart
-pillow
-numpy
-pandas
-sentence-transformers
-torch
-faiss-cpu
-pytest
-pydantic
-python-dotenv
-rapidfuzz
-httpx
-nltk
+# ---------------- Core Backend ----------------
+fastapi~=0.116.0
+uvicorn[standard]~=0.23.2
+pydantic~=2.7.4
+python-dotenv~=1.1.1
+httpx~=0.27.0
+python-multipart~=0.0.9
+
+# ---------------- Frontend ----------------
+streamlit~=1.35.0
+requests~=2.32.3
+pillow~=10.3.0
+
+# ---------------- Data & Embeddings ----------------
+numpy~=1.26.4
+pandas~=2.2.2
+sentence-transformers~=2.7.0
+
+# torch==2.3.1
+# REMOVED: faiss-gpu==1.7.4 (Will install separately or use faiss-cpu)
+
+nltk~=3.9.0
+rapidfuzz~=3.9.4
+scikit-learn~=1.4.2
+tqdm~=4.66.4
+
+# ---------------- LangChain & AI ----------------
+langchain~=0.2.0
+
+# ---------------- Testing ----------------
+pytest~=8.2.2
